fixed overlap

--- a/index.css
+++ b/index.css
@@ -90,7 +90,7 @@ body,html {
 }
 #portfolio {
     width:80%;
-    padding:2% 10%;
+    padding:22% 10%;
 }
 #portfolio div h1 {
     font-size:40px;
@@ -229,7 +229,7 @@ body,html {
         width:100%;
         border-radius:0px;
         height:80vh;
-        background-size:cover;
+        /* background-size:cover; */
     }
     #tagline {
         width:90%;
